feat: implement multi-restaurant cart and grouped selection
- Redesign database schema to decouple `carts` from specific restaurants, allowing a single user cart to contain items from multiple restaurants.
- Add `CartRestaurantGroup` model and `component_cart_restaurant_group.xml` to support grouping cart items by restaurant in the UI.
- Enhance `CartRepository` to fetch and group items by restaurant, calculating sub-totals and delivery fees per group.
- Implement item and restaurant-level selection logic in `CartItemAdapter` with a new `SelectionState` for partial checkouts.
- Update `CartFragment` to render the grouped layout and pass only selected `cart_item_ids` to the checkout flow.
- Remove restaurant conflict checks and the "Replace Cart" dialog from `RestaurantDetailActivity` and `DiscoverFragment`, as the cart now supports mixed items.
- Update technical documentation to reflect the new multi-restaurant cart architecture and multi-order checkout rule.